--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,8 @@
-# src/main/resources/application.properties
-
-# spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-
 server.address=0.0.0.0
-# WebSocket (opcional)
 server.port=8080
 
-# Configuración de base de datos PostgreSQL
+google.api.key=AIzaSyCVMymwvs3joUzFUxf0lyny-HRkerLeCNE
+
 spring.datasource.url=jdbc:postgresql://localhost:5555/postgres
 spring.datasource.username=postgres
 spring.datasource.password=123
